--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,6 +13,7 @@
       <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
           <li> <%= link_to("產品列表", admin_products_path) %> </li>
+            <li> <%= link_to("訂單列表", admin_orders_path) %> </li>
         </ul>
       </div>
       <div class="col-md-10">
