--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -13,6 +13,15 @@
            </li>
           </ul>
 
+          <div class="navbar-form navbar-left">
+             <%= form_tag search_products_path, :method => :get do %>
+             <div class="input-group" id="search-id" >
+               <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="盡情搜尋">
+             </div>
+             <button type="submit" class="btn btn-default">搜尋</button>
+             <% end %>
+           </div>
+
            <ul class="nav navbar-nav navbar-right">
              <li>
               <%= link_to carts_path do  %>
